--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,9 @@ xcuserdata
 *.moved-aside
 *.xcuserstate
 *.xcscmblueprint
-## 
-*.pbxproj
-*.xcworkspacedata
+ 
+#*.pbxproj
+#*.xcworkspacedata
 
 ## Obj-C/Swift specific
 *.hmap
